[gd_scene load_steps=5 format=3 uid="uid://bayi6ghfhdy0c"]

[ext_resource type="Script" path="res://car/jack.gd" id="1_dojhx"]
[ext_resource type="Texture2D" uid="uid://caipsj6o7a335" path="res://assets/use/use_jack_on.png" id="2_y51l3"]
[ext_resource type="Texture2D" uid="uid://mgwtecktqy2h" path="res://assets/use/use_jack_off.png" id="3_d7uro"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrkmm"]
size = Vector2(208, 232)

[node name="jack" type="Node2D"]
script = ExtResource("1_dojhx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(94, 106)
shape = SubResource("RectangleShape2D_mrkmm")
debug_color = Color(0.996078, 0, 0.2, 0.419608)

[node name="Label" type="Label" parent="."]
offset_left = 70.0
offset_top = 87.0
offset_right = 135.0
offset_bottom = 113.0
text = "Jack OFF"

[node name="WorkTimer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -10.0
offset_top = -37.0
offset_right = 198.0
offset_bottom = -10.0

[node name="UseJackOn" type="Sprite2D" parent="."]
visible = false
position = Vector2(190, 106)
texture = ExtResource("2_y51l3")

[node name="UseJackOff" type="Sprite2D" parent="."]
visible = false
position = Vector2(138, 105)
texture = ExtResource("3_d7uro")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="WorkTimer" to="." method="_on_work_timer_timeout"]
